# relay

./: .env.example  .env.example.backend  .gitignore  README.md  docker-compose.yaml
backend/: Cargo.toml  Dockerfile
backend/entity/: Cargo.toml
backend/entity/src/: clicks.rs  lib.rs  mod.rs  prelude.rs  urls.rs  users.rs
backend/migration/src/: lib.rs  m20250720_030347_migration.rs  m20250818_012225_migration2.rs  m20250903_064929_migration3.rs  m20250903_071658_migration4.rs  m20250903_092811_migration5.rs  m20250908_013100_migration7.rs  m20250909_013951_migration8.rs  m20250911_004238_migration9.rs  m20250912_130856_migration10.rs  m20250913_041905_migration11.rs  m20250930_220627_migration11.rs
backend/src/: config.rs  main.rs
backend/src/macros/: webutils.rs
backend/src/routes/: health.rs  mod.rs  url.rs
backend/src/routes/auth/: create_account.rs  delete_account.rs  login.rs  logout.rs  me.rs  mod.rs  request_reset.rs  request_verify.rs  reset_password.rs  verify.rs  verify_reset.rs
backend/src/routes/url/: comment.rs  count.rs  delete.rs  list.rs  mod.rs  url.rs  url_data.rs  urls.rs
backend/src/routes/urls/: comment.rs  delete.rs  list.rs  mod.rs  url.rs
backend/src/types/: typedefs.rs  types.rs
backend/src/util/: cleanup.rs  generate_key.rs  generate_nanoid.rs  mod.rs  send_mail.rs  token.rs
frontend/: .prettierignore  .prettierrc  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(shell)/: hamburger.css  layout.tsx  page.tsx
frontend/src/app/[id]/: page.tsx  route.tsx
frontend/src/app/api/url/: route.ts
frontend/src/app/backend/: auth.ts  url.ts
frontend/src/app/components/: Button.tsx  ClickTable.tsx  DashboardInfoCard.tsx  DashboardInfoCards.tsx  UrlClickChart.tsx
frontend/src/app/context/: StateContext.tsx  UserContext.tsx
frontend/src/app/signup/: page.tsx
frontend/src/util/: api.ts  axiosError.ts  date.ts  embed.ts  types.ts
(+31 files in other folders)
