[workspace]
members = [".", "entity", "migration"]

[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-governor = "0.8.0"
actix-web = "4.11.0"
chrono = "0.4.41"
cuid = "1.3.3"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
sea-orm = { version = "1.1.13", features = ["sqlx-postgres", "runtime-actix", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = "1.46.1"
