[workspace]
members = [".", "entity", "migration"]

[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-governor = "0.8.0"
actix-web = "4.11.0"
chrono = "0.4.41"
dotenv = "0.15.0"
entity = { path = "entity" }
env_logger = "0.11.8"
hex = "0.4.3"
lettre = "0.11.18"
log = "0.4.27"
migration = { path = "migration" }
nanoid = "0.4.0"
rand = "0.9.2"
sea-orm = { version = "1.1.13", features = ["sqlx-postgres", "runtime-actix", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
tokio = "1.46.1"
tokio-cron-scheduler = "0.14.0"
