[workspace]
members = [".", "entity", "migration"]

[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-governor = "0.10.0"
actix-web = "4.13.0"
bcrypt = "0.19.0"
chrono = "0.4.44"
codes-iso-3166 = "0.1.5"
cuid2 = "0.1.4"
dotenv = "0.15.0"
entity = { path = "entity" }
env_logger = "0.11.10"
hex = "0.4.3"
jsonwebtoken = "10.3.0"
lettre = "0.11.21"
log = "0.4.27"
migration = { path = "migration" }
nanoid = "0.4.0"
rand = "0.10.0"
regex = "1.11.3"
sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "runtime-actix", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = "1.51.0"
tokio-cron-scheduler = "0.15.1"
